Closed Bug 1818956 Opened 3 years ago Closed 3 years ago

Perma TEST-UNEXPECTED-FAIL | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | nsIURLQueryStrippingListService should be initialized when the feature is enabled when Gecko 112 merges to Beta on 2023-03-13

Categories

(Core :: Privacy: Anti-Tracking, defect, P1)

defect

Tracking

()

VERIFIED FIXED
112 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox110 --- unaffected
firefox111 --- unaffected
firefox112 + verified

People

(Reporter: NarcisB, Assigned: emz)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

[Tracking Requested - why for this release]:

Central-as-beta simulation

How to run these simulations

Failure log:

Log snippet:

[task 2023-02-26T13:01:08.083Z] 13:01:08     INFO - TEST-START | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js
[task 2023-02-26T13:01:08.100Z] 13:01:08     INFO - GECKO(31392) | console.debug: URLQueryStrippingListService: "constructor"
[task 2023-02-26T13:01:10.348Z] 13:01:10     INFO - TEST-INFO | started process screentopng
[task 2023-02-26T13:01:10.629Z] 13:01:10     INFO - TEST-INFO | screentopng: exit 0
[task 2023-02-26T13:01:10.629Z] 13:01:10     INFO - Buffered messages logged at 13:01:08
[task 2023-02-26T13:01:10.631Z] 13:01:10     INFO - Entering setup bound 
[task 2023-02-26T13:01:10.631Z] 13:01:10     INFO - Leaving setup bound 
[task 2023-02-26T13:01:10.632Z] 13:01:10     INFO - Entering test bound doTestsForTabOpen
[task 2023-02-26T13:01:10.633Z] 13:01:10     INFO - Start testing query stripping for tab open.
[task 2023-02-26T13:01:10.638Z] 13:01:10     INFO - Waiting for nsIURLQueryStrippingListService to be initialized.
[task 2023-02-26T13:01:10.640Z] 13:01:10     INFO - TEST-PASS | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | nsIURLQueryStrippingListService should be initialized when the feature is enabled. - 
[task 2023-02-26T13:01:10.640Z] 13:01:10     INFO - TEST-PASS | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | The loading channel has the expected query string. - 
[task 2023-02-26T13:01:10.645Z] 13:01:10     INFO - TEST-PASS | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | The query string is correct. - "paramToStrip1=123" == "paramToStrip1=123" - 
[task 2023-02-26T13:01:10.645Z] 13:01:10     INFO - TEST-PASS | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | The loading channel has the expected query string. - 
[task 2023-02-26T13:01:10.648Z] 13:01:10     INFO - TEST-PASS | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | The query string is correct. - "PARAMTOSTRIP1=123&paramToStrip2=456" == "PARAMTOSTRIP1=123&paramToStrip2=456" - 
[task 2023-02-26T13:01:10.648Z] 13:01:10     INFO - TEST-PASS | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | The loading channel has the expected query string. - 
[task 2023-02-26T13:01:10.648Z] 13:01:10     INFO - Buffered messages logged at 13:01:09
[task 2023-02-26T13:01:10.648Z] 13:01:10     INFO - TEST-PASS | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | The query string is correct. - "paramToStrip1=123&paramToKeep=456" == "paramToStrip1=123&paramToKeep=456" - 
[task 2023-02-26T13:01:10.650Z] 13:01:10     INFO - TEST-PASS | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | The loading channel has the expected query string. - 
[task 2023-02-26T13:01:10.651Z] 13:01:10     INFO - TEST-PASS | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | The query string is correct. - "paramToStrip1=123&paramToKeep=456&paramToStrip2=abc" == "paramToStrip1=123&paramToKeep=456&paramToStrip2=abc" - 
[task 2023-02-26T13:01:10.653Z] 13:01:10     INFO - TEST-PASS | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | The loading channel has the expected query string. - 
[task 2023-02-26T13:01:10.654Z] 13:01:10     INFO - TEST-PASS | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | The query string is correct. - "paramToKeep=123" == "paramToKeep=123" - 
[task 2023-02-26T13:01:10.655Z] 13:01:10     INFO - Buffered messages logged at 13:01:10
[task 2023-02-26T13:01:10.656Z] 13:01:10     INFO - TEST-PASS | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | The loading channel has the expected query string. - 
[task 2023-02-26T13:01:10.658Z] 13:01:10     INFO - TEST-PASS | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | The query string is correct. - "paramToStrip1=123&paramToKeep=?$!%" == "paramToStrip1=123&paramToKeep=?$!%" - 
[task 2023-02-26T13:01:10.660Z] 13:01:10     INFO - Waiting for nsIURLQueryStrippingListService to be initialized.
[task 2023-02-26T13:01:10.660Z] 13:01:10     INFO - Buffered messages finished
[task 2023-02-26T13:01:10.663Z] 13:01:10     INFO - TEST-UNEXPECTED-FAIL | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | nsIURLQueryStrippingListService should be initialized when the feature is enabled. - "Got false, expected true"
[task 2023-02-26T13:01:10.663Z] 13:01:10     INFO - Stack trace:
[task 2023-02-26T13:01:10.663Z] 13:01:10     INFO - chrome://mochikit/content/browser-test.js:test_is:1493
[task 2023-02-26T13:01:10.663Z] 13:01:10     INFO - chrome://mochitests/content/browser/toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js:waitForListServiceInit:92
[task 2023-02-26T13:01:10.664Z] 13:01:10     INFO - GECKO(31392) | console.debug: URLQueryStrippingListService: "registerAndRunObserver" ({isInitialized:false, pendingInit:null})
[task 2023-02-26T13:01:10.665Z] 13:01:10     INFO - GECKO(31392) | console.debug: URLQueryStrippingListService: "#init: Run"
[task 2023-02-26T13:01:10.666Z] 13:01:10     INFO - Not taking screenshot here: see the one that was previously logged
[task 2023-02-26T13:01:10.667Z] 13:01:10     INFO - TEST-UNEXPECTED-FAIL | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | The loading channel has the expected query string. - "Got \"paramToStrip1=123\", expected \"\""
[task 2023-02-26T13:01:10.667Z] 13:01:10     INFO - Stack trace:
[task 2023-02-26T13:01:10.667Z] 13:01:10     INFO - chrome://mochikit/content/browser-test.js:test_is:1493
[task 2023-02-26T13:01:10.668Z] 13:01:10     INFO - chrome://mochitests/content/browser/toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js:observeChannel/<:51
[task 2023-02-26T13:01:10.668Z] 13:01:10     INFO - resource://testing-common/TestUtils.sys.mjs:observer:149
[task 2023-02-26T13:01:10.669Z] 13:01:10     INFO - GECKO(31392) | console.error: (new Error("Unexpected content-type \"text/plain;charset=US-ASCII\"", "resource://services-settings/Utils.jsm", 407))
[task 2023-02-26T13:01:10.671Z] 13:01:10     INFO - GECKO(31392) | console.debug: URLQueryStrippingListService: "_notifyObservers" ({observerCount:1, runObserverAfterRegister:true, stripEntriesAsString:"paramtostrip1 paramtostrip2", allowEntriesAsString:""})
[task 2023-02-26T13:01:10.684Z] 13:01:10     INFO - Not taking screenshot here: see the one that was previously logged
[task 2023-02-26T13:01:10.685Z] 13:01:10     INFO - TEST-UNEXPECTED-FAIL | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | The query string is correct. - "paramToStrip1=123" == "" - "got \"paramToStrip1=123\", expected \"\" (operator ==)"
[task 2023-02-26T13:01:10.685Z] 13:01:10     INFO - Stack trace:
[task 2023-02-26T13:01:10.685Z] 13:01:10     INFO - is@resource://specialpowers/SpecialPowersSandbox.sys.mjs:87:21
[task 2023-02-26T13:01:10.685Z] 13:01:10     INFO - @chrome://mochitests/content/browser/toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js:69:7
[task 2023-02-26T13:01:10.686Z] 13:01:10     INFO - execute@resource://specialpowers/SpecialPowersSandbox.sys.mjs:138:12
[task 2023-02-26T13:01:10.686Z] 13:01:10     INFO - _spawnTask@resource://specialpowers/SpecialPowersChild.sys.mjs:1607:15
[task 2023-02-26T13:01:10.686Z] 13:01:10     INFO - receiveMessage@resource://specialpowers/SpecialPowersChild.sys.mjs:265:21
Flags: needinfo?(pbz)
Assignee: nobody → pbz
Status: NEW → ASSIGNED
Flags: needinfo?(pbz)

At first I thought this was a test issue - how the test interacts with the async init code. However, this is actually a design issue where the pref observers only get registered on the first call to the query stripper. We'll need to do init at some point after startup so we can register pref listeners earlier. Looking into it!

Severity: -- → S3
Priority: -- → P1
Pushed by pzuhlcke@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/38183945b951 Convert URLQueryStringStripper to XPCOM service and init on profile-on-change. r=anti-tracking-reviewers,necko-reviewers,jesup,timhuang

Paul, after importing this patch in today's beta-sim
another failure got triggered, on a similar file- failure log:

TEST-UNEXPECTED-FAIL | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping_allowList.js | Uncaught exception in test bound doTestsForTabOpen - {}

Can you take a look please?
Can we keep tracking it on the same bug?

Flags: needinfo?(pbz)
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 112 Branch

We should track this as a separate bug. I'm looking into it.

Flags: needinfo?(pbz)
See Also: → 1820170

The failure does not appear in today's beta-sim after importing this patch.

Status: RESOLVED → VERIFIED
Summary: Perma TEST-UNEXPECTED-FAIL | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | nsIURLQueryStrippingListService should be initialized when the feature is enabled. - "Got false, expected true" when Gecko 112 switches to Late → Perma TEST-UNEXPECTED-FAIL | toolkit/components/antitracking/test/browser/browser_urlQueryStringStripping.js | nsIURLQueryStrippingListService should be initialized when the feature is enabled when Gecko 112 merges to Beta on 2023-03-13

(In reply to Pulsebot from comment #3)

Pushed by pzuhlcke@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/38183945b951
Convert URLQueryStringStripper to XPCOM service and init on
profile-on-change. r=anti-tracking-reviewers,necko-reviewers,jesup,timhuang

== Change summary for alert #37584 (as of Wed, 08 Mar 2023 20:28:39 GMT) ==

Improvements:

Ratio Test Platform Options Absolute values (old vs new)
2% startup_about_home_paint_cached windows10-64-shippable-qr e10s fission stylo webrender-sw 587.38 -> 573.92
2% startup_about_home_paint_cached windows10-64-shippable-qr e10s fission stylo webrender-sw 587.00 -> 575.00

For up to date results, see: https://treeherder.mozilla.org/perfherder/alerts?id=37584

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: