Bug 1818956 - Convert URLQueryStringStripper to XPCOM service and init on profile-on-change. r=anti-tracking-reviewers,necko-reviewers,jesup,timhuang

Differential Revision: https://phabricator.services.mozilla.com/D171392